﻿[B]Changelog[/B]
Fixed: AVT.sr Live Stream

[I]Previous changes[/I]
Fixed: a lot of Dutch Regional channel updated their JSON API
Added: ATV.sr (Algemene Televisie Verzorging Uitzendinggemist) (Fixes #601)
Fixed: Omrop Fryslân broke (Fixes #606)
Fixed: RTV Utrecht changed URL
Fixed: L1 did not play back